--- a/index.html
+++ b/index.html
@@ -294,5 +294,23 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+  (function(d,t) {
+    var BASE_URL="https://enterprise.shrobon.com";
+    var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+    g.src=BASE_URL+"/packs/js/sdk.js";
+    g.defer = true;
+    g.async = true;
+    s.parentNode.insertBefore(g,s);
+    g.onload=function(){
+      window.chatwootSDK.run({
+        websiteToken: '44retA5tPr3rU1r5Ywoj2wgN',
+        baseUrl: BASE_URL
+      })
+    }
+  })(document,"script");
+</script>
+
 </body>
 </html>
+
